// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleOptions {
  options: { flags: 'usgi', rewriteFlags: { unicode: false } },
  flags: 'us'
} 1`] = `
Object {
  "flags": "sgi",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions {
  options: { flags: 'usgi', rewriteFlags: { unicode: true } },
  flags: 'us'
} 1`] = `
Object {
  "flags": "usgi",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {
      "unicode": true,
    },
    "useUnicodeFlag": true,
  },
}
`;

exports[`handleOptions {
  options: { unicodePropertyEscape: false, rewriteFlags: { unicode: false } },
  flags: undefined
} 1`] = `
Object {
  "flags": "",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {
      "unicode": false,
    },
    "unicodePropertyEscape": false,
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: false } }, flags: 'u' } 1`] = `
Object {
  "flags": "",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: false } }, flags: 'us' } 1`] = `
Object {
  "flags": "s",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: false } }, flags: undefined } 1`] = `
Object {
  "flags": "",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {
      "unicode": false,
    },
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: { unicode: true } }, flags: 'us' } 1`] = `
Object {
  "flags": "us",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {
      "unicode": true,
    },
    "useUnicodeFlag": true,
  },
}
`;

exports[`handleOptions { options: { rewriteFlags: {} }, flags: 'us' } 1`] = `
Object {
  "flags": "us",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "rewriteFlags": Object {},
    "useUnicodeFlag": true,
  },
}
`;

exports[`handleOptions { options: undefined, flags: '' } 1`] = `
Object {
  "flags": "",
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": false,
  },
}
`;

exports[`handleOptions { options: undefined, flags: undefined } 1`] = `
Object {
  "flags": undefined,
  "options": Object {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": undefined,
  },
}
`;
